--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-     тлф.: +7(925) 300-17-00  почта: Gevorkyan97@mail.ru
+     <a class="header-phone" href="tel:+79253001700">тлф.: +7(925) 300-17-00</a>
+     <a class="header-email" href="mailto:Gevorkyan97@mail.ru">  почта: Gevorkyan97@mail.ru</a>
     </div>
     </header>
 
@@ -24,18 +25,32 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/me1.png"  alt="Фотография Геворкян Арутюна" >
+      </figure>
       <h3>Хочу найти работу своей мечты!</h3>
       <p>Бывший специалист по прадажам и дальнейшему выкупу б/у авто, решил поменять свою профессию!</p>
       <h3>Полезен во всем, было бы в чём</h3>
       <p>Любое задание, будь то трудное или очень трудное - вызывает у меня большой интерес к её выполнению</p>
-      </div>
+      <div class="skills"><h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+        </dl>
+        </div>
+        </div>
+      
     </section>
 
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
-      <h3>Сайт инструктора Кекса</h3>
+     <figure>
+       <a class="button" href="source/project/index.html">Посмотреть САЙТ</a>
+     </figure>
+     <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
